--- a/style.css
+++ b/style.css
@@ -34,13 +34,15 @@ section#tela{
 img{
     width: 50px;
     border-radius: 50%;
-    box-shadow: 3px 3px 3px black;
+    box-shadow: -9px 8px 0px black;
     box-sizing: border-box;
+    padding: 10px;
 }
 img:hover{ 
     border: 1px solid white;
     box-shadow: 5px 3px 3px black;
-    transition: 1s;
+    transform: translate(-4px, -4px);
+    transition: .8s;
 }
 
 section#redes li{
